Added functioning navigation bar & started hero

--- a/style.css
+++ b/style.css
@@ -1,3 +1,226 @@
+@import url('https://fonts.googleapis.com/css2?family=Marcellus&family=Open+Sans:wght@400;600&display=swap');
+
 .container {
-   width: 100%; 
+    width: 100%;
+}
+
+:root {
+    --primary-color: #F8F3EF;
+    --secondary-color: #511624;
+    --tertiary-color: #A54B25;
+    --accent-color: #6A8FB1;
+}
+
+h1 {
+    font-family: 'Marcellus', serif;
+}
+
+p {
+    font-family: 'Open Sans', sans-serif
+}
+
+*,
+*::before,
+*::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* Navigation for mobile goes here */
+
+.navigation {
+    background: var(--secondary-color);
+    text-align: center;
+    padding: 1em;
+    position: sticky;
+    top: 0;
+    z-index: 999;
+}
+
+.navigation a {
+    color: var(--primary-color);
+    text-decoration: none;
+}
+
+.navigation a:hover {
+    color: var(--accent-color);
+    cursor: pointer;
+}
+
+.nav-toggle {
+    display: none;
+}
+
+.nav-toggle-label {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-right: 1em;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.nav-toggle-label span {
+    color: var(--primary-color);
+    font-size: 2em;
+}
+
+.nav-toggle-label span:hover {
+    color: var(--accent-color);
+    cursor: pointer;
+}
+
+nav {
+    position: absolute;
+    text-align: center;
+    top: 100%;
+    left: 0;
+    background: var(--secondary-color);
+    width: 100%;
+    transform: scale(1, 0);
+    transition: transform 400ms ease-in-out;
+    transform-origin: top;
+}
+
+nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+nav li {
+    margin-bottom: 1em;
+    margin-left: 1em;
+}
+
+nav a {
+    color: var(--primary-color);
+    text-decoration: none;
+    font-size: 1.3rem;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    opacity: 0;
+    transition: opacity 150ms ease-in-out;
+}
+
+nav a:hover {
+    color: var(--accent-color);
+}
+
+.nav-toggle:checked~nav {
+    transform: scale(1, 1);
+}
+
+.nav-toggle:checked~nav a {
+    opacity: 1;
+    transition: opacity 250ms ease-in-out 250ms;
+}
+
+
+/* contents here */
+.hero {
+    background-image: url(project-images/mobile-hero2.jpg);
+    height: 350px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    /*   background-attachment: fixed; */
+    display: relative;
+}
+
+.hero-content {
+    background: rgba(81, 22, 36, .85);
+    align-items: center;
+    position: absolute;
+    top: 227px;
+    width: 100%;
+    padding: 40px 25px;
+}
+
+.hero-content h1 {
+    color: var(--primary-color);
+    text-align: center;
+}
+
+.register-button {
+    background-color: var(--tertiary-color);
+    color: var(--primary-color);
+    padding: 10px 15px;
+    border-radius: 5px;
+    border: none;
+    text-decoration: none;
+}
+
+.register-button:hover {
+    background-color: var(--accent-color);
+    cursor: pointer;
+}
+
+
+
+
+/* MEDIA QUEREY FOR DESKTOP */
+@media screen and (min-width: 980px) {
+    .nav-toggle-label {
+        display: none;
+    }
+
+    .navigation {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-left: 3%; 
+        padding-right: 3%;
+    }
+
+    nav {
+        all: unset;
+    }
+
+    nav ul {
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    nav li {
+        margin-left: 3em;
+        margin-bottom: 0;
+    }
+
+    nav a {
+        opacity: 1;
+        position: relative;
+    }
+
+    /*   add line baove or below selection on hover */
+
+    nav a::before {
+        content: "";
+        display: block;
+        height: 4px;
+        background: var(--accent-color);
+        position: absolute;
+        bottom: -0.5em;
+        left: 0;
+        right: 0;
+
+        transform: scale(0, 1);
+        transition: transform ease-in-out 250ms;
+        transform-origin: right;
+    }
+
+    nav a:hover::before {
+        transform: scale(1, 1);
+    }
+
+    /*   contents */
+    .hero {
+        background-image: url(project-images/desktop-hero.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        height: 70vh;
+    }
 }
