--- a/style.css
+++ b/style.css
@@ -7,16 +7,23 @@
 :root {
     --primary-color: #F8F3EF;
     --secondary-color: #511624;
-    --tertiary-color: #A54B25;
+    --tertiary-color: #A55B25;
     --accent-color: #6A8FB1;
 }
 
-h1 {
+h1, h2 {
     font-family: 'Marcellus', serif;
 }
 
+h3, h4 {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+}
+
 p {
-    font-family: 'Open Sans', sans-serif
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    line-height: 23px;
 }
 
 *,
@@ -29,11 +36,10 @@ p {
 
 /* For Mobile */
 
-/* Navigation for mobile goes here */
-
+/* NAV FOR MOBILE HERE */
 .navigation {
     background: var(--secondary-color);
-    text-align: center;
+    /* text-align: center; */
     padding: 1em;
     position: sticky;
     top: 0;
@@ -89,12 +95,19 @@ nav {
 nav ul {
     margin: 0;
     padding: 0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+   /* padding-top: 2em; */
     list-style: none;
 }
 
 nav li {
     margin-bottom: 1em;
     margin-left: 1em;
+    padding: 1.5em 0;
+    /* font-size: 24px; */
 }
 
 nav a {
@@ -121,7 +134,7 @@ nav a:hover {
 }
 
 
-/* contents here */
+/* ABOUT SECT FOR MOBILE HERE */
 .hero {
     background-image: url(project-images/mobile-hero2.jpg);
     height: 350px;
@@ -129,23 +142,31 @@ nav a:hover {
     background-repeat: no-repeat;
     background-position: center;
     /*   background-attachment: fixed; */
-    display: relative;
+    position: relative;
 }
 
 .hero-content {
     background: rgba(81, 22, 36, .85);
     align-items: center;
     position: absolute;
-    top: 227px;
+    /* top: 227px; */
+    bottom: 0;
     width: 100%;
-    padding: 40px 25px;
+    padding: 2em 2em;
 }
 
 .hero-content h1 {
     color: var(--primary-color);
-    text-align: center;
+    text-align: left;
 }
 
+.hero-btn {
+    display: block;
+    margin: 0 auto;
+    margin-top: 1.5em;
+}
+
+/* The register button css applies to all register buttons on the site! */
 .register-button {
     background-color: var(--tertiary-color);
     color: var(--primary-color);
@@ -160,10 +181,65 @@ nav a:hover {
     cursor: pointer;
 }
 
+/* ABOUT SECT FOR MOBILE HERE */
+.about {
+    background-color: var(--primary-color);
+    padding: 30px 20px;
+    display: block;
+}
 
+.about p {
+    margin-top: 1em;;
+}
 
+.about img {
+    width: 80%;
+    flex-shrink: 0;
+    border-radius: 5px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2em;
+}
+
+/* EVENT DETAILS SECTION FOR MOBILE */
+.event-details {
+    background-color: var(--primary-color);
+    padding: 30px 20px;
+    display: block;
+}
+
+.details-box {
+    background-color: var(--tertiary-color);
+    width: 100%;
+    height: 141px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    padding: 10px 22px;
+    margin-top: 1em;
+}
+
+.details-box h3 {
+    color: var(--primary-color); 
+    text-align: center;
+}
+
+.details-box p {
+    color: var(--primary-color);
+    text-align: center;
+    margin-top: .5em;
+}
+
+.google-map {
+    margin: 2em 0;
+}
+
+.list-item {
+    display: flex;
+}
 
 /* MEDIA QUEREY FOR DESKTOP */
+
 @media screen and (min-width: 980px) {
     .nav-toggle-label {
         display: none;
@@ -173,7 +249,7 @@ nav a:hover {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding-left: 3%; 
+        padding-left: 3%;
         padding-right: 3%;
     }
 
@@ -182,7 +258,9 @@ nav a:hover {
     }
 
     nav ul {
+        height: inherit;
         display: flex;
+        flex-direction: row;
         justify-content: flex-end;
     }
 
@@ -225,5 +303,32 @@ nav a:hover {
         background-position: center;
         height: 70vh;
         flex-shrink: 0;
+        position: relative;
+    }
+
+    .hero-content {
+        background: rgba(81, 22, 36, .85);
+        position: absolute;
+        left: 0;
+        /* top: 50%; */
+        width: 45%;
+        padding: 25px 72px 25px 150px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 25px;
+        flex-shrink: 0;
+    }
+
+    .hero-content h1 {
+        color: var(--primary-color);
+        text-align: left;
+        font-size: 48px;
+    }
+
+    .hero-btn {
+        /* display: block;
+        margin: 0 auto; */
+        margin-top: 1.5em;
     }
 }
