--- a/style.css
+++ b/style.css
@@ -321,6 +321,100 @@ nav a:hover {
     width: 85px;
 }
 
+/* VOLUNTEER FORM section */
+.volunteer  {
+    background-color: var(--primary-color);
+    padding: 30px 20px;
+}
+
+.volunteer h4 {
+    margin-bottom: 1em;
+}
+
+.volunteer-form {
+    /* height: 490px; */
+    width: 100%;
+    border-radius: 5px;
+    background: var(--Secondary, #511624);
+    padding: 25px;
+    align-items: center;
+}
+
+
+label {
+    line-height: 1.5;
+    font-size: 18px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    color: var(--primary-color);
+    display: block;
+    /* text-align: center; */
+    margin-bottom: 1em;
+}
+
+input {
+    display: block;
+    width: 100%;
+    padding: 5px;
+    border: none;
+    border-radius: 5px;
+    background-color: var(--primary-color);
+    margin-bottom: 1.5em;
+}
+
+select {
+    display: block;
+    width: 100%;
+    padding: 5px;
+    border: none;
+    border-radius: 5px;
+    background-color: var(--primary-color);
+    margin-bottom: 1.5em;
+}
+
+.agree {
+    display: inline ;
+}
+.agree-message {
+    font-size: 14px;
+    text-align: center;
+}
+
+.agree-message a {
+    color: var(--primary-color);
+    cursor: pointer;
+}
+
+.submit-btn {
+    margin: 0 auto;
+}
+
+/* MORE CONTENT section */
+.more-content {
+    background-color: var(--tertiary-color);
+    padding: 35px 20px;
+}
+
+.display-card {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 8em;
+    border-radius: 5px;
+    display: relative;
+}
+
+.faq-card {
+    background-image: url(project-images/mobile-faq-pic-mini.jpg);
+    margin-bottom: 1.5em;
+}
+
+.contact-card {
+    background-image: url(project-images/mobile-contact-us-pic-mini.jpg);
+    margin-top: 1.5em;
+}
+
 /* MEDIA QUEREY FOR DESKTOP */
 
 @media screen and (min-width: 980px) {
