--- a/style.css
+++ b/style.css
@@ -237,6 +237,9 @@ nav a:hover {
 
 .google-map {
     margin: 2em 0;
+    width: 100%;
+    height: 400px;
+    border:0;
 }
 
 .pricing {
@@ -627,16 +630,23 @@ footer p {
     .details-boxes {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        gap: 1.5em;
+        gap: 3em;
     }
 
     .map-schedule {
         display: flex;
-        /* grid-template-columns: repeat(3, 1fr); */
+        gap: 1.5em;
+    }
+
+    .google-map {
+        margin: 2em 0em;
+        width: 750px;
+        height: 420;
+        border:0;
     }
 
     .pricing {
-        padding: 2em 1em 0 7em;
+        padding-top: 2em;
     }
 
     .pricing1 {
