--- a/style.css
+++ b/style.css
@@ -515,6 +515,9 @@ footer p {
 
 .faq-hero {
     background-image: url(project-images/mobile-faq-hero.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     height: 145px;
     display: flex;
     align-items: center;
@@ -524,7 +527,6 @@ footer p {
 .faq-hero h1 {
     color: var(--primary-color);
     text-align: center;
-
 }
 
 .questions {
@@ -577,9 +579,54 @@ footer p {
 
 .pricing2-btn {
     margin: 0 auto;
-    display: flex;
-    
+    display: flex; 
 }
+
+/* CONTACT STYLES FOR MOBILE HERE */
+
+.contact-hero {
+    background-image: url(project-images/mobile-contact-hero.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 145px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.contact-hero h1 {
+    color: var(--primary-color);
+    text-align: center;
+}
+
+.contact {
+    padding: 30px 20px;
+}
+
+.contact-form-row input{
+    display: block;
+    width: 100%;
+    padding: 5px;
+    border-radius: 3px;
+    border: 0.5px solid #000;
+    background-color: #F2EFED;
+    margin-bottom: 1.5em;
+}
+
+.contact-form-row label {
+    line-height: 1.5;
+    font-size: 18px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    color: #000;
+    display: block;
+    /* text-align: center; */
+    margin-bottom: 1em;
+}
+
+
+
 
 /* MEDIA QUEREY FOR DESKTOP */
 @media screen and (min-width: 980px) {
@@ -865,17 +912,21 @@ footer p {
 
     .registration-box {
         display: grid;
+        align-items: center;
         grid-template-columns: repeat(3, 1fr);
-        /*display: flex;*/
         gap: 2em;
+        padding: 0;
     }
 
     .registration-box img {
         grid-column: 1/3;
-        height: 100%;
+        /* height: 100%; */
+        max-height:100%; 
+        max-width:100%;
     }
 
     .faq-pricing {
+        display: block;
         justify-content: center;
         align-items: center;
     }
@@ -889,6 +940,7 @@ footer p {
     }
 
     .pricing2-btn {
-        margin: k;
+        margin: initial;
+        margin-bottom: 3em;
     }
 }
