--- a/style.css
+++ b/style.css
@@ -321,29 +321,65 @@ nav a:hover {
 
 .sponsors h1 {
     margin-bottom: 20px;
+    text-align: center;
 }
 
-.sponsor-logos {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 2em;
+.sponsor-logos-1 {
+    padding: 3em 0 2em 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly; 
     align-items: center;
 }
+
+.sponsor-logos-2 {
+    padding: 2em 0 2em 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly; 
+    align-items: center;
+}
+
+.sponsor-logos-3 {
+    padding: 3em 0 3em 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly; 
+    align-items: center;
+}
+
 .sponsor-logos img {
     margin: 0 auto;
 }
 
 .op-bank {
-    width: 145px;
+    width: 150px;
 }
 
-.literacy4life {
-    width: 230px;
+.riverside {
+    width: 210px;
+}
+
+.illy {
+    width: 75px;
+}
+
+.towne-insurance {
+    width: 150px;
+}
+
+.iron-bound {
+    width: 120px
+}
+
+.time-n-pay {
+    width: 190px;
 }
 
 .maxfit {
-    width: 85px;
+    width: 150px;
 }
+
 
 /* VOLUNTEER FORM section */
 .volunteer  {
@@ -848,22 +884,59 @@ textarea {
         padding: 30px 150px 50px 150px;
     }
 
-    .sponsor-logos {
+    .sponsor-logos-1 {
+        padding: 3em 0 2em 0;
         display: flex;
-        padding: 3em 0 3em 0;
+        flex-direction: row;
+        justify-content: space-evenly; 
+        align-items: center;
     }
-    
+
+    .sponsor-logos-2 {
+        padding: 2em 0 2em 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly; 
+        align-items: center;
+    }
+
+    .sponsor-logos-3 {
+        padding: 3em 0 3em 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly; 
+        align-items: center;
+    }
+
     .op-bank {
         width: 288px;
     }
     
-    .literacy4life {
-        width: 305px;
+    .riverside {
+        width: 350px;
     }
     
-    .maxfit {
-        width: 168px;
+    .illy {
+        width: 130px;
     }
+
+    .towne-insurance {
+        width: 200px;
+    }
+
+    .iron-bound {
+        width: 210px
+    }
+
+    .time-n-pay {
+        width: 300px;
+    }
+
+    .maxfit {
+        width: 250px;
+    }
+
+
 
     .volunteer {
         padding: 40px 150px 40px 150px;
